# PanoramaPro

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/panoramapro/: CompleterTest.java  ExampleInstrumentedTest.java  LaMaInferenceTest.java  OnnxEnvironment.java  OnnxIntegrationTest.java  OpenCVIntegrationTest.java  StitchingEngineTest.java  StitchingTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: APAP.h  Constants.h  FeatureMatcher.h  ImageCompleter.h  LaMaInpainter.h  Logger.h  SIFT.h  Utils.h
app/src/main/cpp/src/: APAP.cpp  FeatureMatcher.cpp  ImageCompleter.cpp  LaMaInpainter.cpp  SIFT.cpp  Utils.cpp
app/src/main/java/com/example/panoramapro/: MainActivity.java
app/src/main/java/com/example/panoramapro/core/: APAPStitcher.java  IImageCompleter.java  IStitcher.java  IStitchingEngine.java  ImageProcessorFactory.java  LaMaCompleter.java  NoOpCompleter.java  OpencvCompleter.java  OpencvInpainter.java  SIFTStitcher.java  StitchingEngine.java
app/src/main/java/com/example/panoramapro/effects/: IEffectsProcessor.java  TinyPlanetProcessor.java
app/src/main/java/com/example/panoramapro/guidance/: IGuidanceSystem.java
app/src/main/java/com/example/panoramapro/ui/capture/: CaptureFragment.java  ExportDialogFragment.java  LevelOverlayView.java  PhotoPagerAdapter.java  PreviewFragment.java  ResultFragment.java  StitchingViewModel.java
app/src/main/java/com/example/panoramapro/ui/effects/: EffectsFragment.java
app/src/main/java/com/example/panoramapro/ui/gallery/: GalleryAdapter.java  GalleryFragment.java  StitchingViewModel.java
app/src/main/java/com/example/panoramapro/ui/settings/: SettingsFragment.java
app/src/main/java/com/example/panoramapro/utils/: BitmapSaver.java  FileUtils.java
app/src/main/res/layout/: activity_main.xml  dialog_preview_image.xml  dialog_preview_result.xml  dialog_simple.xml  fragment_capture.xml  fragment_effects.xml  fragment_gallery.xml  fragment_preview.xml  fragment_result.xml  fragment_settings.xml  fragment_stitching_result.xml  item_gallery_image.xml  item_photo_preview.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml  nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/panoramapro/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
